syntax = "proto3";

package lesson;

option go_package = "github.com/calmato/shs-web/api/proto/lesson";

message StudentSubmission {
  string                   student_id        = 1;
  int64                    shift_summary_id  = 2;
  bool                     decided           = 3;
  // int64                    suggested_classes = 4;
  int64                    created_at        = 5;
  int64                    updated_at        = 6;
  repeated SuggestedLesson suggested_lessons = 7;
  reserved 4;
}

message SuggestedLesson {
  int64 subject_id = 1;
  int64 total      = 2;
}
